--- a/style.css
+++ b/style.css
@@ -8,6 +8,16 @@ body {
 	height: 100%;
 	}
 
+#loadingView {
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	background: pink;
+	z-index: 999;
+}
+
 .wrapper {
 	margin: 0;
 	padding:0;
