--- a/style.css
+++ b/style.css
@@ -9,13 +9,9 @@ body {
 	}
 
 #loadingView {
-	position: fixed;
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
-	background: pink;
-	z-index: 999;
+	background: orange;
+	padding-top: 20px;
+	padding-bottom: 20px;
 }
 
 .wrapper {
